# TDengine

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/balance/: CMakeLists.txt
src/balance/inc/: bnInt.h  bnScore.h  bnThread.h
src/balance/src/: bnMain.cpp  bnScore.cpp  bnThread.cpp
src/client/: CMakeLists.txt
src/client/inc/: tscLocalMerge.h  tscLog.h  tscProfile.h  tscSubquery.h  tscUtil.h  tschemautil.h  tsclient.h
src/client/jni/: com_taosdata_jdbc_TSDBJNIConnector.h
src/client/src/: TSDBJNIConnector.cpp  tscAsync.cpp  tscLocal.cpp  tscLocalMerge.cpp  tscParseInsert.cpp  tscPrepare.cpp  tscProfile.cpp  tscSQLParser.cpp  tscSchemaUtil.cpp  tscServer.cpp  tscSql.cpp  tscStream.cpp  tscSub.cpp  tscSubquery.cpp  tscSystem.cpp  tscUtil.cpp
src/client/tests/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/inc/: tcmdtype.h  tdataformat.h  tglobal.h  tlocale.h  tname.h  tsystem.h  ttimezone.h  tulog.h  tvariant.h
src/common/src/: tdataformat.cpp  tglobal.cpp  tname.cpp  ttypes.cpp  tvariant.cpp
src/connector/jdbc/: CMakeLists.txt
src/connector/odbc/: CMakeLists.txt
src/cq/: CMakeLists.txt
src/cq/src/: cqMain.cpp
src/cq/test/: CMakeLists.txt  cqtest.cpp
src/dnode/: CMakeLists.txt
src/dnode/inc/: dnodeCfg.h  dnodeCheck.h  dnodeEps.h  dnodeInt.h  dnodeMInfos.h  dnodeMPeer.h  dnodeMRead.h  dnodeMWrite.h  dnodeMain.h  dnodeMgmt.h  dnodeModule.h  dnodePeer.h  dnodeShell.h  dnodeStep.h  dnodeTelemetry.h  dnodeVMgmt.h  dnodeVRead.h  dnodeVWrite.h  dnodeVnodes.h
src/dnode/src/: dnodeCfg.cpp  dnodeCheck.cpp  dnodeEps.cpp  dnodeMInfos.cpp  dnodeMPeer.cpp  dnodeMRead.cpp  dnodeMWrite.cpp  dnodeMain.cpp  dnodeModule.cpp  dnodePeer.cpp  dnodeShell.cpp  dnodeStep.cpp  dnodeSystem.cpp  dnodeVMgmt.cpp  dnodeVRead.cpp  dnodeVWrite.cpp  dnodeVnodes.cpp
src/inc/: dnode.h  filesystem.hpp  http.h  mnode.h  monitor.h  object.h  query.h  tacct.h  tadmin.h  taos.h  taosdef.h  taoserror.h  taosmsg.h  tbn.h  tcq.h  tgrant.h  tmqtt.h  trpc.h  tsdb.h  tsync.h  ttype.h  twal.h  vnode.h  workpool.h
src/kit/: CMakeLists.txt
src/kit/shell/: CMakeLists.txt
src/kit/taosdemo/: CMakeLists.txt  taosdemo.cpp
src/kit/taosdemox/: CMakeLists.txt  taosdemox.cpp
src/kit/taosdump/: CMakeLists.txt  taosdump.cpp
src/mnode/: CMakeLists.txt
src/mnode/inc/: SdbMgmt.h  mnodeAcct.h  mnodeCluster.h  mnodeDb.h  mnodeDef.h  mnodeDnode.h  mnodeInt.h  mnodeMnode.h  mnodePeer.h  mnodeProfile.h  mnodeRead.h  mnodeSdb.h  mnodeShow.h  mnodeTable.h  mnodeUser.h  mnodeVgroup.h  mnodeWrite.h  object.h
src/mnode/src/: defer.h  mnodeAcct.cpp  mnodeCluster.cpp  mnodeDb.cpp  mnodeDnode.cpp  mnodeInt.cpp  mnodeMain.cpp  mnodeMnode.c  mnodeMnode.cpp  mnodePeer.cpp  mnodeProfile.cpp  mnodeRead.cpp  mnodeSdb.cpp  mnodeShow.cpp  mnodeTable.cpp  mnodeUser.cpp  mnodeVgroup.cpp  mnodeWrite.cpp
src/os/: CMakeLists.txt
src/os/inc/: os.h  osAlpine.h  osArm32.h  osArm64.h  osAtomic.h  osCommon.h  osDarwin.h  osDef.h  osDir.h  osFile.h  osLinux32.h  osLinux64.h  osLz4.h  osMath.h  osMemory.h  osNingsi.h  osRand.h  osSemphone.h  osSocket.h  osString.h  osSysinfo.h  osTime.h  osTimer.h  osWindows.h
src/plugins/: CMakeLists.txt
src/plugins/http/: CMakeLists.txt
src/plugins/monitor/: CMakeLists.txt
src/plugins/mqtt/: CMakeLists.txt
src/query/: CMakeLists.txt
src/query/inc/: qArithmeticOperator.h  qAst.h  qExecutor.h  qExtbuffer.h  qFill.h  qHistogram.h  qPercentile.h  qResultbuf.h  qSqlparser.h  qTsbuf.h  queryLog.h  tsqlfunction.h
src/query/src/: qAggMain.cpp  qAst.cpp  qExecutor.cpp  qExtbuffer.cpp  qFill.cpp  qFilterfunc.cpp  qHistogram.cpp  qParserImpl.cpp  qPercentile.cpp  qResultbuf.cpp  qTokenizer.cpp  qTsbuf.cpp  qUtil.cpp  sql.cpp
src/query/tests/: CMakeLists.txt
src/rpc/: CMakeLists.txt
src/rpc/inc/: rpcCache.h  rpcHead.h  rpcLog.h  rpcTcp.h  rpcUdp.h
src/rpc/src/: rpcCache.cpp  rpcMain.cpp  rpcTcp.cpp  rpcUdp.cpp
src/rpc/test/: CMakeLists.txt  rclient.cpp  rsclient.cpp  rserver.cpp
src/sync/: CMakeLists.txt
src/sync/inc/: syncInt.h  syncMain.h  syncMsg.h  syncTcp.h
src/sync/src/: syncArbitrator.cpp  syncMain.cpp  syncMsg.cpp  syncRestore.cpp  syncRetrieve.cpp  syncTcp.cpp
src/tsdb/: CMakeLists.txt
src/util/: CMakeLists.txt
src/vnode/: CMakeLists.txt
src/wal/: CMakeLists.txt
(+152 files in other folders)
