CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(TDengine)

INCLUDE_DIRECTORIES(${TD_COMMUNITY_DIR}/src/client/inc)
INCLUDE_DIRECTORIES(${TD_COMMUNITY_DIR}/src/query/inc)
INCLUDE_DIRECTORIES(inc)

IF (TD_LINUX)
  AUX_SOURCE_DIRECTORY(./src SRC)
  LIST(REMOVE_ITEM SRC ./src/shellWindows.cpp)
  LIST(REMOVE_ITEM SRC ./src/shellDarwin.cpp)
  ADD_EXECUTABLE(shell ${SRC})  
  
  IF (TD_SOMODE_STATIC)
    TARGET_LINK_LIBRARIES(shell taos_static)
  ELSE ()
    TARGET_LINK_LIBRARIES(shell taos)
  ENDIF ()
  
  SET_TARGET_PROPERTIES(shell PROPERTIES OUTPUT_NAME taos)
ELSEIF (TD_WINDOWS)
  LIST(APPEND SRC ./src/shellEngine.cpp)
  LIST(APPEND SRC ./src/shellMain.cpp)
  LIST(APPEND SRC ./src/shellWindows.cpp)
  ADD_EXECUTABLE(shell ${SRC})
  TARGET_LINK_LIBRARIES(shell taos_static)

  IF (TD_POWER)
    SET_TARGET_PROPERTIES(shell PROPERTIES OUTPUT_NAME power)
  ELSE ()   
    SET_TARGET_PROPERTIES(shell PROPERTIES OUTPUT_NAME taos)
  ENDIF ()
ELSEIF (TD_DARWIN)
  LIST(APPEND SRC ./src/shellEngine.cpp)
  LIST(APPEND SRC ./src/shellMain.cpp)
  LIST(APPEND SRC ./src/shellDarwin.cpp)
  LIST(APPEND SRC ./src/shellCommand.cpp)
  LIST(APPEND SRC ./src/shellImport.cpp)
  ADD_EXECUTABLE(shell ${SRC})
  TARGET_LINK_LIBRARIES(shell taos_static)
  SET_TARGET_PROPERTIES(shell PROPERTIES OUTPUT_NAME taos)
ENDIF ()

